Update README.md and fix list overflowing the div

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -86,3 +86,7 @@ button {
 button:hover {
   background-color: #D3D3D3;
 }
+
+ul {
+  margin-left: 30px;
+}
